--- a/style.css
+++ b/style.css
@@ -95,8 +95,15 @@ h1 {
 footer {
   background: #333;
   color: #fff;
-  text-align: center;
   padding: 20px 0;
+}
+
+.footer-container {
+  text-align: center;
+}
+
+.footer-container p {
+  margin: 0;
 }
 
 .not-found {
